--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,10 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation "com.squareup.okhttp3:logging-interceptor:3.10.0"
+
+    // Dagger 2
+    implementation 'com.google.dagger:dagger:2.11'
+    implementation 'com.google.dagger:dagger-android-support:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+
 }
